--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -68,3 +68,8 @@ main {
     object-fit: contain;
   }
 }
+@media only screen and (max-width: 460px) {
+  .single-pokemon-card {
+    min-width: 300px;
+  }
+}
